# royal_analyzator_v2

./: .gitignore  README.md  pyproject.toml  selectors.json
src/royal_analyzer/: __init__.py  adaptive_weights.py  analyzer.py  app.py  collector.py  controller.py  dice_decoder.py  dom_parser.py  gui.py  keep_alive.py  models.py  prediction_engine.py  statistics.py  storage.py  virtual_tester.py
tests/: test_core.py
