[project]
name = "royal-analyzer-pro"
version = "0.1.0"
description = "Desktop analyzer for Royal game history, recommendations, and virtual testing."
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
  "selenium>=4.20",
  "matplotlib>=3.8",
]

[project.scripts]
royal-analyzer = "royal_analyzer.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
